--- a/docs/css/presentation.css
+++ b/docs/css/presentation.css
@@ -13,11 +13,64 @@ svg {
   align-items: center;
   justify-content: center;
 }
-.left-bar .content-wrap .font-1 {
-  color: #578464;
-  font-size: 12vw;
+.left-bar .content-wrap .font {
+  color: #d9e2ec;
+}
+.left-bar .content-wrap .font--type1 {
+  font-size: 8vw;
+  color: #d5dfe9;
+}
+.left-bar .content-wrap .font--type2 {
+  font-size: 3vw;
+  color: #d9e2ec;
 }
 
+#ukraine-views {
+  width: auto;
+  position: relative;
+  top: -15vh;
+  height: 130vh;
+}
+
+.text-color--awesome {
+  animation: colorchange 20s infinite alternate;
+}
+
+@keyframes colorchange {
+  0% {
+    color: #67a1ec;
+  }
+  10% {
+    color: #ffffff;
+  }
+  20% {
+    color: #1abc9c;
+  }
+  30% {
+    color: #c2b5ad;
+  }
+  40% {
+    color: #608f97;
+  }
+  50% {
+    color: #34495e;
+  }
+  60% {
+    color: #8a8a9b;
+  }
+  70% {
+    color: #2980b9;
+  }
+  80% {
+    color: #928654;
+  }
+  90% {
+    color: #2980b9;
+  }
+  100% {
+    color: #a39598;
+  }
+}
 .step {
   color: #578464;
   display: block;
@@ -46,34 +99,62 @@ svg {
   right: 0;
   background-color: #ffffff;
   transition: opacity 1.5s ease-out;
-  opacity: 0.8;
+  opacity: 0.7;
   z-index: 1;
+}
+.step .ukraine-views {
+  position: absolute;
+  background-color: #ffffff;
+  opacity: 1;
+  z-index: 1;
+}
+.step .ukraine-views--video-blur-1 {
+  top: 950px;
+  bottom: -195px;
+  left: 0px;
+  right: -555px;
+}
+.step .ukraine-views--video-blur-2 {
+  top: -153px;
+  bottom: -75px;
+  left: 1926px;
+  right: -575px;
+}
+.step .ukraine-views--video-blur-3 {
+  top: -153px;
+  bottom: 950px;
+  left: -26px;
+  right: -575px;
 }
 .step.present .blur-inactive {
   opacity: 0;
 }
+.step.present #ukraine-views--video-blur {
+  opacity: 0;
+}
 
-.step-1 .title-wrap {
-  color: #ffffff;
-  z-index: 1;
-}
-.step-1 .title-wrap .main-title {
-  text-transform: uppercase;
-  font-size: 5vw;
-  margin-top: 25vh;
-  margin-bottom: 30vh;
-}
-.step-1 .title-wrap .sub-title {
-  font-size: 2em;
-  text-align: right;
-}
-.step-1 .blur-wrap {
+.video-blur--wrap {
   position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   background-color: #ffffff75;
+}
+
+.tour-throughg-kh-first-slide .title-wrap {
+  color: #ffffff;
+  z-index: 1;
+}
+.tour-throughg-kh-first-slide .title-wrap .main-title {
+  text-transform: uppercase;
+  font-size: 5vw;
+  margin-top: 25vh;
+  margin-bottom: 30vh;
+}
+.tour-throughg-kh-first-slide .title-wrap .sub-title {
+  font-size: 2em;
+  text-align: right;
 }
 
 .slide-left-text {
@@ -106,12 +187,18 @@ svg {
   right: 0;
 }
 
-.historic-map--backgrount {
+.historic-slides {
   background-color: #d9e2ec;
 }
-
-.step-4 .info:first-of-type {
+.historic-slides .info {
+  width: 35vw;
+}
+.historic-slides .info:first-of-type {
   margin-top: 64vh;
+}
+
+.kh-during-revolution-img {
+  height: 100vh;
 }
 
 /*# sourceMappingURL=presentation.css.map */
