--- a/docs/css/presentationDefaultStyles.css
+++ b/docs/css/presentationDefaultStyles.css
@@ -74,3 +74,21 @@ q {
 strike {
     opacity: 0.7;
 }
+
+.disable-presentation-overlay {
+    position: fixed;
+    top: 0;
+    background-color: white;
+    height: 100vh;
+    width: 100vw;
+    z-index: 1000;
+    font-size: 4vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.hidden{
+    display: none;
+}
